@@ -25,7 +25,9 @@ BETA PUBLIC RELEASE VERSION 1.3.1       5-27-08
 	Numpy.pth at configure stage.
   * Updated pdb2pka/substruct/Makefile.am. 
   * Fixed isBackbone bug in definitions.py.
-  * Fixed a bug for Carboxylic residues in hydrogens.py
+  * Fixed a bug for Carboxylic residues in hydrogens.py.
+  * Fixed a bug in routines.py, which caused hydrogens added in LEU and ILE
+    in eclipsed conformation rather than staggered. 
 
 #############################################################################
 BETA PUBLIC RELEASE VERSION 1.3.0       1-8-08
